// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/calculations/Options should match snapshot 1`] = `
<div>
  <span
    class="variable variable"
  />
</div>
`;

exports[`components/calculations/Options should match snapshot menu open 1`] = `
<div
  aria-hidden="true"
>
  <span
    class="variable variable"
  />
</div>
`;
